...
        android:layout_height="wrap_content"
        android:focusable="false"
        android:clickable="false"
        ></CheckBox>

    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/rowTextView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="16sp"></TextView>
</LinearLayout>
